force-app/main/default/objects/Account/fields/Achat_groupe__c.field-meta.xml
<CustomField>
    <fullName>Achat_groupe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Achat groupé</label>
    <type>Checkbox</type>
</CustomField>