force-app/main/default/objects/Account/fields/Activite__c.field-meta.xml
<CustomField>
    <fullName>Activite__c</fullName>
    <formula>Code_NAF__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activité</label>
    <type>Text</type>
</CustomField>