force-app/main/default/objects/Account/fields/Adherent_symposium__c.field-meta.xml
<CustomField>
    <fullName>Adherent_symposium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adhérent Symposium</label>
    <type>Checkbox</type>
</CustomField>