force-app/main/default/objects/Account/fields/Adresse__c.field-meta.xml
<CustomField>
    <fullName>Adresse__c</fullName>
    <formula>Numero_voie__c &amp;&quot; &quot;&amp; Voie__c &amp;&quot; &quot;&amp; Code_postal__c &amp;&quot; &quot;&amp; Ville__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse</label>
    <type>Text</type>
</CustomField>