force-app/main/default/objects/Account/fields/Adresse_mail_facturation__c.field-meta.xml
<CustomField>
    <fullName>Adresse_mail_facturation__c</fullName>
    <description>Adresse mail de facturation pour les partenaires</description>
    <label>Adresse mail de facturation</label>
    <type>Email</type>
</CustomField>