force-app/main/default/objects/Account/fields/Batiment_a_plus_de_2_ans__c.field-meta.xml
<CustomField>
    <fullName>Batiment_a_plus_de_2_ans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batiment a plus de 2 ans ?</label>
    <type>Checkbox</type>
</CustomField>