force-app/main/default/objects/Account/fields/Campagne_emailing__c.field-meta.xml
<CustomField>
    <fullName>Campagne_emailing__c</fullName>
    <label>Campagne emailing</label>
    <length>80</length>
    <type>Text</type>
</CustomField>