force-app/main/default/objects/Account/fields/CAR_Gaz__c.field-meta.xml
<CustomField>
    <fullName>CAR_Gaz__c</fullName>
    <label>CAR Gaz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>