force-app/main/default/objects/Account/fields/CAR_Gaz_Syndic__c.field-meta.xml
<CustomField>
    <fullName>CAR_Gaz_Syndic__c</fullName>
    <label>CAR Gaz Syndic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>