force-app/main/default/objects/Account/fields/CEE__c.field-meta.xml
<CustomField>
    <fullName>CEE__c</fullName>
    <formula>TEXT(Code_NAF__r.CEE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEE</label>
    <type>Text</type>
</CustomField>