force-app/main/default/objects/Account/fields/Charge_RDV__c.field-meta.xml
<CustomField>
    <fullName>Charge_RDV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargé de RDV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>