force-app/main/default/objects/Account/fields/Code_NAF__c.field-meta.xml
<CustomField>
    <fullName>Code_NAF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code NAF</label>
    <referenceTo>CodeNAF__c</referenceTo>
    <relationshipLabel>Entités Juridiques</relationshipLabel>
    <relationshipName>EntitesJuridiques</relationshipName>
    <type>Lookup</type>
</CustomField>