force-app/main/default/objects/Account/fields/Code_partenaire__c.field-meta.xml
<CustomField>
    <fullName>Code_partenaire__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Code partenaire</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>