force-app/main/default/objects/Account/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <inlineHelpText>Les commentaires remplis par les commerciaux.</inlineHelpText>
    <label>Commentaire</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>