force-app/main/default/objects/Account/fields/Commentaires_client__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_client__c</fullName>
    <inlineHelpText>Les commentaires remplis par le client sur le site internet.</inlineHelpText>
    <label>Commentaires du client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>