force-app/main/default/objects/Account/fields/Conformite_E_Attestation__c.field-meta.xml
<CustomField>
    <fullName>Conformite_E_Attestation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conformité E-Attestation</label>
    <type>Checkbox</type>
</CustomField>