force-app/main/default/objects/Account/fields/Convention__c.field-meta.xml
<CustomField>
    <fullName>Convention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Convention</label>
    <referenceTo>Convention__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>