force-app/main/default/objects/Account/fields/Convention_inactive__c.field-meta.xml
<CustomField>
    <fullName>Convention_inactive__c</fullName>
    <formula>Convention__r.Inactive__c</formula>
    <label>Convention inactive</label>
    <type>Checkbox</type>
</CustomField>