force-app/main/default/objects/Account/fields/CSPE__c.field-meta.xml
<CustomField>
    <fullName>CSPE__c</fullName>
    <formula>TEXT( Code_NAF__r.CSPE__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSPE</label>
    <type>Text</type>
</CustomField>