force-app/main/default/objects/Account/fields/EntiteJuridiquePrincipale__c.field-meta.xml
<CustomField>
    <fullName>EntiteJuridiquePrincipale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité Juridique Principale</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Filiales</relationshipLabel>
    <relationshipName>EntiteJuridiquePrincipales</relationshipName>
    <type>Lookup</type>
</CustomField>