force-app/main/default/objects/Account/fields/Facture_devis_4__c.field-meta.xml
<CustomField>
    <fullName>Facture_devis_4__c</fullName>
    <label>Facture devis 4</label>
    <type>Url</type>
</CustomField>