force-app/main/default/objects/Account/fields/Formulaire__c.field-meta.xml
<CustomField>
    <fullName>Formulaire__c</fullName>
    <label>Formulaire</label>
    <length>80</length>
    <type>Text</type>
</CustomField>