force-app/main/default/objects/Account/fields/Nom_Entreprise_Proprietaire__c.field-meta.xml
<CustomField>
    <fullName>Nom_Entreprise_Proprietaire__c</fullName>
    <formula>Owner.CompanyName</formula>
    <label>Nom de l&apos;entreprise du propriétaire</label>
    <type>Text</type>
</CustomField>