force-app/main/default/objects/Account/fields/nom_partenaire__c.field-meta.xml
<CustomField>
    <fullName>nom_partenaire__c</fullName>
    <label>nom du partenaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>