force-app/main/default/objects/Account/fields/Nom_salon__c.field-meta.xml
<CustomField>
    <fullName>Nom_salon__c</fullName>
    <label>Nom du salon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nom_salon</valueSetName>
    </valueSet>
</CustomField>