force-app/main/default/objects/Account/fields/Numero_voie__c.field-meta.xml
<CustomField>
    <fullName>Numero_voie__c</fullName>
    <label>Numéro voie</label>
    <length>20</length>
    <type>Text</type>
</CustomField>