force-app/main/default/objects/Account/fields/Parent_AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>Parent_AccountOwner__c</fullName>
    <label>Parent_AccountOwner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>