force-app/main/default/objects/Account/fields/Responsable_Leads__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Leads__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Leads</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>