force-app/main/default/objects/Account/fields/Secteur__c.field-meta.xml
<CustomField>
    <fullName>Secteur__c</fullName>
    <label>Secteur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>