force-app/main/default/objects/Account/fields/SecteurActiviteEllisphere__c.field-meta.xml
<CustomField>
    <fullName>SecteurActiviteEllisphere__c</fullName>
    <label>Secteur d&apos;activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>