force-app/main/default/objects/Account/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Ancien client</fullName>
            </value>
            <value>
                <fullName>Perdu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>