force-app/main/default/objects/Account/fields/Syndic__c.field-meta.xml
<CustomField>
    <fullName>Syndic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syndic</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Syndic</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Copropriétés</relationshipLabel>
    <relationshipName>Coproprietes</relationshipName>
    <type>Lookup</type>
</CustomField>