force-app/main/default/objects/Account/fields/TECH_Ancien_proprietaire_piste__c.field-meta.xml
<CustomField>
    <fullName>TECH_Ancien_proprietaire_piste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ancien propriétaire de la piste dont la source est &apos;Demande de contact site&apos;</description>
    <inlineHelpText>Ancien propriétaire de la piste dont la source est &apos;Demande de contact site&apos;</inlineHelpText>
    <label>Ancien propriétaire de la piste dont la</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>