force-app/main/default/objects/Account/fields/TECH_CAR_Totale__c.field-meta.xml
<CustomField>
    <fullName>TECH_CAR_Totale__c</fullName>
    <formula>CAR_Elec__c +  CAR_Elec_Syndic__c +  CAR_Gaz__c +  CAR_Gaz_Syndic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAR totale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>