force-app/main/default/objects/Account/fields/TECH_DoNotNotify__c.field-meta.xml
<CustomField>
    <fullName>TECH_DoNotNotify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Empêche l&apos;envoi automatique de l&apos;e-mail de notification au directeur du partenariat lors d&apos;une réassignation.</description>
    <inlineHelpText>Empêche l&apos;envoi automatique de l&apos;e-mail de notification au directeur du partenariat lors d&apos;une réassignation.</inlineHelpText>
    <label>Ne Pas Notifier</label>
    <type>Checkbox</type>
</CustomField>