force-app/main/default/objects/Account/fields/TECH_IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si à vrai le syndic est privé</description>
    <label>TECH_IsPrivate</label>
    <type>Checkbox</type>
</CustomField>