force-app/main/default/objects/Account/fields/TECH_last_credit_score__c.field-meta.xml
<CustomField>
    <fullName>TECH_last_credit_score__c</fullName>
    <label>Last credit score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>