force-app/main/default/objects/Account/fields/TECH_Owner_Manger_Mail__c.field-meta.xml
<CustomField>
    <fullName>TECH_Owner_Manger_Mail__c</fullName>
    <formula>Owner.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Mail</label>
    <type>Text</type>
</CustomField>