force-app/main/default/objects/Account/fields/TECH_OwnerRegion__c.field-meta.xml
<CustomField>
    <fullName>TECH_OwnerRegion__c</fullName>
    <formula>TEXT(Owner.Region_activite__c)</formula>
    <label>TECH_OwnerRegion</label>
    <type>Text</type>
</CustomField>