force-app/main/default/objects/Account/fields/TECH_Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>TECH_Parent_Account_Name__c</fullName>
    <label>TECH Parent Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>