force-app/main/default/objects/Account/fields/TECH_Parent_account_owner__c.field-meta.xml
<CustomField>
    <fullName>TECH_Parent_account_owner__c</fullName>
    <formula>Parent.Owner.FirstName + &apos; &apos; + Parent.Owner.LastName</formula>
    <label>TECH Parent account owner</label>
    <type>Text</type>
</CustomField>