force-app/main/default/objects/Account/fields/TECH_Parent_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>TECH_Parent_Account_Type__c</fullName>
    <formula>Parent.RecordType.Name</formula>
    <label>TECH Parent Account Type</label>
    <type>Text</type>
</CustomField>