force-app/main/default/objects/Account/fields/TECH_Partner_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>TECH_Partner_OwnerName__c</fullName>
    <formula>Owner.Contact.Owner.FirstName + &apos; &apos; + Owner.Contact.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Partner_OwnerName</label>
    <type>Text</type>
</CustomField>