force-app/main/default/objects/Account/fields/TECH_Responsable_Legal_Mail__c.field-meta.xml
<CustomField>
    <fullName>TECH_Responsable_Legal_Mail__c</fullName>
    <label>TECH Responsable légal mail</label>
    <type>Email</type>
</CustomField>