force-app/main/default/objects/Account/fields/TotalEconomieIdentifiee__c.field-meta.xml
<CustomField>
    <fullName>TotalEconomieIdentifiee__c</fullName>
    <description>Somme de tous les champs économies identifiées (TURPE) des PDE rattachés au compte</description>
    <inlineHelpText>Somme de tous les champs économies identifiées (TURPE) des PDE rattachés au compte</inlineHelpText>
    <label>Total Economie TURPE identifiée (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>