force-app/main/default/objects/Account/fields/TotalEconomieIdentifieeSyndic__c.field-meta.xml
<CustomField>
    <fullName>TotalEconomieIdentifieeSyndic__c</fullName>
    <label>Total Economie TURPE identifiée (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>