force-app/main/default/objects/Account/fields/Type_de_travaux__c.field-meta.xml
<CustomField>
    <fullName>Type_de_travaux__c</fullName>
    <label>Type de travaux</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_de_travaux</valueSetName>
    </valueSet>
</CustomField>