force-app/main/default/objects/Account/fields/Type_offre_selectionnee__c.field-meta.xml
<CustomField>
    <fullName>Type_offre_selectionnee__c</fullName>
    <label>Type offre selectionnée</label>
    <length>120</length>
    <type>Text</type>
</CustomField>