force-app/main/default/objects/Account/fields/Type_partenaire__c.field-meta.xml
<CustomField>
    <fullName>Type_partenaire__c</fullName>
    <label>Type de partenaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributeur</fullName>
            </value>
            <value>
                <fullName>Indépendant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>