force-app/main/default/objects/Account/fields/URL_page_origine__c.field-meta.xml
<CustomField>
    <fullName>URL_page_origine__c</fullName>
    <label>URL de la page d&apos;origine</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>