force-app/main/default/objects/Account/fields/Voie__c.field-meta.xml
<CustomField>
    <fullName>Voie__c</fullName>
    <label>Voie</label>
    <length>155</length>
    <type>Text</type>
</CustomField>