force-app/main/default/objects/Account/recordTypes/Account_EntiteJuridiquePrincipale.recordType-meta.xml
<RecordType>
    <fullName>Account_EntiteJuridiquePrincipale</fullName>
    <active>true</active>
    <label>Entité Juridique Principale</label>
</RecordType>