force-app/main/default/objects/Account/recordTypes/Account_Partner.recordType-meta.xml
<RecordType>
    <fullName>Account_Partner</fullName>
    <active>true</active>
    <description>Record type regroupant les utilisateurs de la communauté &quot;Partner&quot;</description>
    <label>Account Partner</label>
</RecordType>