force-app/main/default/objects/Account/recordTypes/Apporteur_Affaires.recordType-meta.xml
<RecordType>
    <fullName>Apporteur_Affaires</fullName>
    <active>true</active>
    <label>Apporteur Affaires</label>
</RecordType>