force-app/main/default/objects/Account/recordTypes/Copropriete.recordType-meta.xml
<RecordType>
    <fullName>Copropriete</fullName>
    <active>true</active>
    <label>Copropriété</label>
</RecordType>