force-app/main/default/objects/Account/recordTypes/Prescripteur.recordType-meta.xml
<RecordType>
    <fullName>Prescripteur</fullName>
    <active>true</active>
    <label>Prescripteur</label>
</RecordType>