force-app/main/default/objects/Account/recordTypes/Syndic.recordType-meta.xml
<RecordType>
    <fullName>Syndic</fullName>
    <active>true</active>
    <label>Syndic</label>
</RecordType>