force-app/main/default/objects/Account/validationRules/EntiteJuridiquePrincipale.validationRule-meta.xml
<ValidationRule>
    <fullName>EntiteJuridiquePrincipale</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName =&apos;Account_Filiale&apos;,ISBLANK( EntiteJuridiquePrincipale__c))</errorConditionFormula>
    <errorDisplayField>EntiteJuridiquePrincipale__c</errorDisplayField>
    <errorMessage>Une filiale doit appartenir à une entité juridique principale</errorMessage>
</ValidationRule>