force-app/main/default/objects/Account/validationRules/Lead_source_incompleteAchatGroupe.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_source_incompleteAchatGroupe</fullName>
    <active>true</active>
    <description>Si la lead source est &quot;Achat groupé&quot; il faut renseigner la période.</description>
    <errorConditionFormula>AND(
 Achat_groupe__c = TRUE ,
ISPICKVAL(Periode_achat_groupe__c,&apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Periode_achat_groupe__c</errorDisplayField>
    <errorMessage>Merci de renseigner la période de l&apos;achat groupé.</errorMessage>
</ValidationRule>