force-app/main/default/objects/Account/listViews/Comptes_Apporteurs_Affaires.listView-meta.xml
<ListView>
    <fullName>Comptes_Apporteurs_Affaires</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ELLISPHERE__Elli_CompanyEmail__c</columns>
    <columns>Code_partenaire__c</columns>
    <columns>Responsable_Leads__c</columns>
    <columns>Convention__c</columns>
    <columns>Convention_inactive__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Apporteur_Affaires</value>
    </filters>
    <label>Comptes Apporteurs Affaires</label>
</ListView>