force-app/main/default/objects/Account/listViews/Comptes_Partenaires.listView-meta.xml
<ListView>
    <fullName>Comptes_Partenaires</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Account_Partner</value>
    </filters>
    <label>Comptes Partenaires</label>
</ListView>